# Machine-Learning-Regularization-L1-and-L2--Schizophrenia

./: README.md  pyproject.toml
data/: synthetic_data_generation.py  synthetic_features_data.csv  synthetic_labels.csv
src/: Code.py  Script.py
